# rust-smart-fhir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ecr.yml  rust.yml
iac/dns/: main.tf  providers.tf
iac/ecr/: main.tf  outputs.tf  providers.tf
iac/fargate/: main.tf  providers.tf
resources/: example-smart-app.css  example-smart-app.js
src/: callback.rs  health.rs  index.rs  launch.rs  lib.rs  main.rs  smart.rs  state.rs
src/smart/: configuration.rs  token.rs
