[package]
name = "rust-smart-fhir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "*"
actix-web = "4"
base64 = "0.22.1"
chrono = "*"
env_logger = "*"
fhir-sdk = { version = "*", features = ["r4b"] }
futures = "*"
http = "*"
log = "*"
maud = { version = "*", features = ["actix-web"] }
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["json"] }
oauth2 = "*"
url = "*"
url-builder = "*"
uuid = { version = "*", features = ["v4"]}